# 15Days-SoloProject

./: .gitignore  3-load-embed-vector-retrieve.py  4-structured-outputs.py  README.md  app.py  commons.py  hello-langgraph.py  philippines_destinations.csv  pyproject.toml  scraper.py  tool-calling.py
1-code-resources/: 1-hello.py  2-basics.py  5-structured-retrieve.py  7-tool-calling-agentexec.py
2-AI-study-buddy/: actions.py  app.py  commons.py  display.py  dockerfile  requirements.txt  tester.py  tools.py  utils.py
src/: README.md  calabarzon-touristspots.csv
